# AuroraVpnAggregator

./: .gitignore  README.md  pyproject.toml  requirements.txt  valid_pool.json
.github/workflows/: deploy-pages.yml  update-deploy.yml  update-subscription.yml
config/: settings.yaml
config/sources/: github.yaml  local.yaml  telegram.yaml
data/sources/: custom_nodes.txt  custom_nodes.yaml  custom_nodes_base64.txt  test_nodes.txt  test_nodes.yaml
docs/: README.md  clash.yaml  index.html  nodes.json  singbox.json  stats.json  v2ray.txt
docs-design/01-VPN订阅聚合系统/: 02-功能需求文档.md  04-数据结构设计.md
docs/01-design/01-VPN订阅聚合系统/: 00-版本索引.md
docs/01-design/01-VPN订阅聚合系统/01-v1.0.0-初始版本/: 01-设计摘要.md  03-架构设计文档.md  05-模块接口设计文档.md  06-配置说明文档.md  11-开发任务分解.md
docs/s/Aurora@2026VPN/: channel_results.json  clash.yaml  nodes.json  singbox.json  stats.json  v2ray.txt
docs/s/Aurora@2026VPN/all/: clash.yaml  nodes.json  singbox.json  v2ray.txt
docs/s/Aurora@2026VPN/pass/: clash.yaml  nodes.json  singbox.json  v2ray.txt
scripts/: run.py  test_with_xray.py
src/: __init__.py
src/core/: __init__.py  deduplicator.py  fetcher.py  generator.py  parser.py  tester.py
src/handlers/: __init__.py  base.py  github_handler.py  local_handler.py  telegram_handler.py
src/models/: node.py
src/utils/: __init__.py  geoip.py  logger.py  network.py
